# fedimint-wallets

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  SIMPLE-FEDIMINT-WALLET-REPORT.md  TODOS.md  flake.nix
docs/: devimint-runbook.md  devimint-two-fed-harness.patch  federation-data-sources-spec.md  fedimint-mechanics.md  integration-phase-plan.md  operation-history-spec.md  phase1-implementation-spec.md  phase2-plan.md  phase3-plan.md  phase4-implementation-spec.md  phase4-plan.md  phase5-plan.md  phase6a-plan.md  real-sats-pilot-runbook.md  roadmap-to-v1.md  route-economics-decisions.md  wallet-recovery-spec.md
docs/adr/: 0001-allocator-purpose-resilience-not-solvency.md  0002-no-tor-in-v1.md  0003-recovery-silent-backup.md  0004-v1-lightning-only.md  0005-run-own-recurringd.md  0006-allocator-concentrated-warm-standby.md  0007-auto-allocate-disclose-not-consent.md  0008-open-source-donation-funded.md  0009-license-agpl.md  0010-warm-standby-selection.md  0011-app-security-instant-view-auth-to-send.md  0012-no-synced-contacts.md  0013-recurringd-one-of-many.md  0014-on-device-agent-standing-instruction.md  0015-donations-fund-development.md  0016-device-side-federation-selection.md  0017-sybil-resistant-selection-probes-gate.md  0018-v1-evacuation-balance-cap.md  0019-federation-signals-trust-model.md  0020-observer-untrusted-prior.md  0021-integration-concrete-over-traits.md  0022-money-move-model-and-inflow-direction.md  0023-wallet-cli-first-class-frontend.md  0024-fully-async-intent-model.md  0025-recovery-fresh-partition-seed-is-the-backup-unit.md
docs/reviews/: 2026-07-03-engine-review.md  2026-07-05-fresh-eyes-review.md
docs/superseded/: gateway-await-tx-accepted-draft.md
wallet-api/: Cargo.toml
wallet-api/src/: lib.rs
wallet-cli/: Cargo.toml
wallet-cli/src/: client.rs  exit.rs  main.rs  render.rs
wallet-cli/tests/: cli_client.rs  hang_gateway.py  smoke_crash_move_devimint.sh  smoke_daemon_chain_devimint.sh  smoke_daemon_devimint.sh  smoke_devimint.sh  smoke_directinflow_devimint.sh  smoke_discover_devimint.sh  smoke_evacuate_devimint.sh  smoke_history_devimint.sh  smoke_money_devimint.sh  smoke_move_devimint.sh  smoke_probe_devimint.sh  smoke_responsiveness_devimint.sh  smoke_soak_devimint.sh  smoke_tick_devimint.sh  smoke_watch_devimint.sh
wallet-core/: Cargo.toml
wallet-core/src/: allocator.rs  discovery.rs  executor.rs  ledger.rs  lib.rs  probe.rs  scorer.rs  types.rs  watch.rs
wallet-core/tests/: allocator_golden.rs  executor.rs  ledger.rs  probe_verdict.rs  scorer.rs  watch_scheduler.rs
wallet-daemon/: Cargo.toml
wallet-daemon/deploy/: walletd.service
wallet-daemon/src/: config.rs  error.rs  handlers.rs  main.rs  server.rs  tests.rs
wallet-fedimint/: Cargo.toml
wallet-fedimint/src/: discovery.rs  executor.rs  fee.rs  journal.rs  lib.rs  move_protocol.rs  multi_client.rs  probe.rs  runtime.rs  tick.rs  types.rs
wallet-fedimint/src/service/: actor.rs  driver.rs  mod.rs  scheduler.rs  tests.rs
wallet-fedimint/tests/: fee.rs  journal.rs  ledger.rs  move_meta.rs  move_plan.rs  move_protocol.rs  probe_journal.rs  probe_runtime.rs
