[workspace]
members = ["wallet-core", "wallet-api", "wallet-fedimint", "wallet-cli", "wallet-daemon"]
resolver = "2"
# Cargo resolves the workspace root by filesystem ancestry, ignoring .gitignore.
# Exclude the analysis clones so `cargo` inside them isn't captured by this workspace.
exclude = ["ecash-app", "harbor", "vipr-wallet"]
