[package]
name = "wallet-fedimint"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# Phase 1: the pure `move_protocol` (step 1) plus the fedimint SDK integration
# (steps 2-4). The fedimint dependency is pinned to douglaz/fedimint (the project
# owner's fork) at the 0.12-alpha commit we built + validated against live
# (PR fedimint/fedimint#8774, branch docs/custodial-receive-spec). Pinned to the
# live branch HEAD; the earlier ade83765 pin was orphaned by a docs-only rebase
# (the 1-commit delta touched only docs/specs/*.md — SDK code is identical, so no
# re-validation). Revisit this pin before any production ship.
# NOTE: from here the crate needs the nix build env for fedimint's native deps —
# build/test with: nix develop /home/master/p/fedimint -c cargo <cmd>
[dependencies]
wallet-core = { path = "../wallet-core" }
# All fedimint crates share ONE git source + rev (douglaz/fedimint @ b108ec6, see note above).
fedimint-core = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-client = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-bip39 = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-rocksdb = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
# `ConnectorRegistry` (join/open need it) is already resolved transitively via
# fedimint-client, so pinning it directly adds no new version to the lockfile.
fedimint-connectors = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-mint-client = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-wallet-client = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-ln-client = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-lnv2-client = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
fedimint-lnv2-common = { git = "https://github.com/douglaz/fedimint.git", rev = "b108ec66ab21b70e1eea35d8663d9941a665ad58" }
# `Bolt11Invoice` (the type lnv2 `send`/`receive` speak) — pinned to the SAME version
# fedimint's workspace uses (0.33), so it resolves to the one copy already in the lockfile;
# depending on it directly adds no new version and guarantees the exact same type.
lightning-invoice = "0.33"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
