[package]
name = "wallet-fedimint"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# Phase 1: the pure `move_protocol` (step 1) plus the fedimint SDK integration
# (steps 2-4). The fedimint dependency is pinned to douglaz/fedimint (the project
# owner's fork) at the 0.12-alpha commit we built + validated against live
# (PR fedimint/fedimint#8774, branch docs/custodial-receive-spec). Pinned to the
# live branch HEAD; the earlier ade83765 pin was orphaned by a docs-only rebase
# (the 1-commit delta touched only docs/specs/*.md — SDK code is identical, so no
# re-validation). Revisit this pin before any production ship.
# NOTE: from here the crate needs the nix build env for fedimint's native deps —
# build/test with: nix develop /home/master/p/fedimint -c cargo <cmd>
[dependencies]
wallet-core = { path = "../wallet-core" }
wallet-api = { path = "../wallet-api" }
# All fedimint crates share ONE git source + rev. Pinned to douglaz/fedimint
# `wallet-pin/iroh-plus-recovery` (5bd145c) = the iroh long-poll branch (63ab515)
# plus one cherry-picked commit making a failed module recovery reportable instead
# of parking forever (upstreaming as fix/recovery-failure-is-determinate). Seed
# recovery (br-m9m) needs that fix so a failed recovery fails instead of hanging.
fedimint-core = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-api-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-bip39 = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-rocksdb = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
# `ConnectorRegistry` (join/open need it) is already resolved transitively via
# fedimint-client, so pinning it directly adds no new version to the lockfile.
fedimint-connectors = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-mint-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-wallet-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-ln-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-lnv2-client = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
fedimint-lnv2-common = { git = "https://github.com/douglaz/fedimint.git", rev = "5bd145cd6decc2daea92ed0d0f48476a52a79b17" }
# `Bolt11Invoice` (the type lnv2 `send`/`receive` speak) — pinned to the SAME version
# fedimint's workspace uses (0.33), so it resolves to the one copy already in the lockfile;
# depending on it directly adds no new version and guarantees the exact same type.
lightning-invoice = "0.33"
# `bitcoin::Network` (the type `WalletClientModule::get_network` returns, used by the
# probe runner to derive `is_mainnet`) — pinned to the SAME version fedimint's
# workspace uses (0.32), so it resolves to the one copy already in the lockfile and
# the `Network` type matches exactly (a mismatched copy would not compare equal).
bitcoin = "0.32"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util", "time"] }
